--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,5 @@ jobs:
             aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
             aws-region: us-east-1
 
-          - name: 
+        - name: Deploy static site to S3 Bucket
+          run: aws s3 sync . s3://portfolio-github-demo --delete
