--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
             aws-region: us-east-1
 
         - name: Deploy static site to S3 Bucket
-          run: aws s3 sync . s3://portfolio-github-demo --delete
+          run: aws s3 sync . s3://my-online-portfolio --delete
